# Boids_SFML

./: CMakeLists.txt
include/: .agent.hpp.~undo-tree~  Actor.hpp  BoidLogic.hpp  SimConfig.hpp
src/: .Actor.cpp.~undo-tree~  .main.cpp.~undo-tree~  Actor.cpp  BoidLogic.cpp  main.cpp  sfml-app
